@@ -1,3 +1,6 @@
+2010-08-30 Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Fix bug when using failover.
+
 2010-08-18  Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Fix bug when mount on admin node raises exception with clusterdb (#76).
 
